--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,9 @@
-sonar.projectKey=csample
-sonar.projectName=C Sample
+sonar.projectKey=minimal-c
+sonar.projectName=Minimal C
 sonar.projectVersion=1.0
 
 sonar.sources=src
 
 # The build-wrapper output dir
 sonar.cfamily.build-wrapper-output=bw-output
+
